<resources>
    <!-- Strings Global -->
    <string name="app_name">NUNA</string>
    <string name="alt_image">Imagen de un planeta</string>
    <string name="app_nuna">App NuNa</string>

    <!-- Strings related to Home Fragment -->
    <string name="txt_rbtn_opcion1">Noticias</string>
    <string name="txt_rbtn_opcion2">Actividades</string>

    <!-- Strings related to BottomNavigation -->
    <string name="home">Home</string>
    <string name="mapa">Mapa</string>
    <string name="comunidades">Comunidad</string>
    <string name="colabora">Colabora</string>
    <string name="perfil">Pefil</string>

    <!-- Strings related to Comunity Fragment -->
    <string name="buscar">Buscar</string>
    <string name="buscar_auto_hint">Buscar</string>
    <string name="resultados">Resultados</string>
    <string name="nombreComunidad">Comunidad Verde</string>
    <string name="misComunidades">Mis Comunidades</string>
    <string name="string_comunity_description">Descripcion de la Comunidad</string>
    <string name="string_comunity_name">Nombre de la Comunidad</string>
    <string name="nombre_miembro_comunidad">Miembro n</string>

    <!-- Strings related to dialog Fragment message-->
    <string name="txt_titulo">Cargo(miembro/colaborador)</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_rango">Rango</string>
    <string name="txt_logro">Logros</string>

    <!-- Strings related to authentication -->
    <string name="title_login">LOGIN</string>
    <string name="title_register">CREAR CUENTA</string>
    <string name="title_confirmation">CONFIRMAR CUENTA</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastName">Apellidos</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_code">Codigo de Verificacion</string>
    <string name="txt_btn_login">Iniciar Sesión</string>
    <string name="txt_btn_register">Registrarse</string>
    <string name="txt_btn_confirmation">Confirmar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to collaborate Fragment -->
    <string name="txt_title">Crea una comunidad</string>
    <string name="txt_label_nombreCom">Nombre de la comunidad</string>
    <string name="txt_hint_nombreCom">Ingrese el nombre de la comunidad</string>
    <string name="txt_label_descripcion">Descripción</string>
    <string name="txt_hint_descripcion">Ingrese la descripcion de la comunidad</string>
    <string name="txt_label_localizacion">Localización</string>
    <string name="txt_hint_coordenadas">Ingrese el nombre de la localización</string>
    <string name="txt_label_pais">Latitud</string>
    <string name="txt_label_region">Longitud</string>
    <string name="txt_btn_crearCom">Crear comunidad</string>

    <!-- Strings related to profile Fragment -->
    <string name="txt_rbtn_option1">Mi perfil</string>
    <string name="txt_rbtn_option2">Mis logros</string>

    <!-- Strings related to profile-Datos Fragment -->
    <string name="txt_label_nombre">Nombres</string>
    <string name="txt_label_apellido">Apellidos</string>
    <string name="txt_label_celular">Numero de celular</string>
    <string name="txt_label_email">Correo electrónico</string>
    <string name="txt_btn_signout">Cerrar Sesión</string>

    <!-- Strings related to Profile-Logros Fragment -->
    <string name="txt_logros">Logros</string>
    <string name="txt_comunidades">Comunidades</string>
    <string name="todo">TODO</string>

    <string name="descripcion">Imagen</string>
    <string name="txt_btn_seleccionarUbi">Seleccionar Ubicacion</string>
    <string name="seleccionar">Seleccionar</string>

</resources>