<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_desing_base"
    tools:context=".fragments.LoginFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="269dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="41dp"
        android:contentDescription="@string/alt_image"
        android:src="@drawable/planeta" />


    <TextView
        android:id="@+id/title_fragment"
        android:layout_width="110dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="142dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_fragment"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="151dp"
        android:text="@string/title_login"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/app_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/bg_edt"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="ejemplo@gamil.com"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/edt_mail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/bg_edt"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="**************"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/bg_btn_secondary"
        android:text="@string/txt_btn_primary"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>