<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MyComunityFragment">

    <TextView
        android:id="@+id/textViewMyComunitySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="28dp"
        android:text="@string/misComunidades"
        app:layout_constraintBottom_toTopOf="@+id/rectanguloMyComunity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewMyComunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/resultados"
        app:layout_constraintBottom_toTopOf="@+id/idRecyclerMyComunity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectanguloMyComunity" />

    <com.example.ecoclub.View.Rectangulo
        android:id="@+id/rectanguloMyComunity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="68dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMyComunity"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/buscar"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/rectanguloMyComunity"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnSearchMyComunity"
        app:layout_constraintStart_toStartOf="@+id/rectanguloMyComunity"
        app:layout_constraintTop_toTopOf="@+id/rectanguloMyComunity" />


    <ImageButton
        android:id="@+id/imgBtnSearchMyComunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_content"
        android:src="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMyComunity"
        app:layout_constraintEnd_toEndOf="@+id/rectanguloMyComunity"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="@+id/rectanguloMyComunity"
        app:layout_constraintTop_toTopOf="@+id/rectanguloMyComunity"
        app:layout_constraintVertical_bias="0.59" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRecyclerMyComunity"
        android:layout_width="match_parent"
        android:layout_height="339dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectanguloMyComunity"
        app:layout_constraintVertical_bias="0.036" />


</androidx.constraintlayout.widget.ConstraintLayout>